# MorfeGa

./: AGENTS.md  README.md  settings.gradle.kts
.kilo/plans/: voxel-engine-minecraft-like.md
app/: build.gradle.kts
app/src/androidTest/java/com/mx/morfega/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BlockTypes.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Model.h  PerlinNoise.cpp  PerlinNoise.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp
app/src/main/java/com/mx/morfega/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mx/morfega/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
